Adds new year covid rules.

--- a/default.html
+++ b/default.html
@@ -22,6 +22,44 @@
     <section>
       <h1 class="w3-wide w3-center"> Aktuelles</h1>
       <p class="w3-opacity"> 
+        <h3> Lasst uns ins neue Jahr starten!,
+        8.1.2021</h3>
+        <h4>
+          Für den Sportbetrieb in der Halle mit den
+          Erwachsenen und den Kindern sind die
+          Einschränkungen zurzeit begrenzt bis zum
+          12.1.2022.
+        </h4>
+          Die wichtigsten Punkte sind: Nur nach der
+          2G+-Regel dürfen Personen am Sport teilnehmen.
+          Das heißt nur geimpfte oder genesene Teilnehmer,
+          die zusätzlich einen max. 24 Stunden
+          zurückliegenden bescheinigten negativen
+          Antigentest vorweisen können oder über einen max.
+          48 Stunden zurückliegenden PCR-Test verfügen.
+          Schüler und Schülerrinnen bis 18 Jahre dürfen auch
+          weiterhin unter 3G Sport betreiben.  In der
+          Ferienzeit gilt der Schülerausweis nicht, es muss
+          ein negativer Antigentest einer zertifizierten
+          Stelle vorgelegt werden.  Kinder unter 15 Jahren
+          sind immunisierten Personen
+          gleichgestellt.<br>
+          <br>
+          Eltern/Kind Kurse Da bei diesen Kursen durch die
+          Coronaauflagen ein zusätzlicher Aufwand nötig ist,
+          hat der Vorstand für diese Kurse ab dem 01.01.2022
+          einen Aufnahmestopp beschlossen, die Probestunden
+          werden bis auf weiteres nicht mehr angeboten.  Die
+          Teilnahme an den Kursen wird auf 15 Kinder
+          begrenzt und auf eine Begleitperson pro Kind
+          beschränkt. Die Anmeldung für die Teilnahme
+          erfolgt über die Übungsleiterin.<br>
+          <br>
+          Wir informieren euch über neue
+          Entwicklungen, wenn sich etwas ändert.
+          Bis dahin, bleibt gesung. <br>
+          <br>
+          Der Vorstand <br>
 
         <h3>Endlich wieder Sport! Yoga-Kurs beim TuS, 17.08.2021</h3>
         Liebe Vereinsmitglieder,
