New corona rules and style upgrade.

--- a/default.html
+++ b/default.html
@@ -7,11 +7,14 @@
     <link rel="stylesheet" href="site/style.css">
   </head>
   <body>
-    <a href="default.html">
-      <img src="img/logo.png">
-    </a>
+    <figure> 
+      <a href="default.html">
+        <img src="img/home_top.png" class="center">
+      </a>
+    </figure>
     <nav class="navBar">
-      <a href="site/home.html"class="w3-button w3-bar-item">Home</a>
+      <a href="default.html"class="w3-button w3-bar-item">Aktuelles</a>
+      <a href="site/home.html"class="w3-button w3-bar-item">Über uns</a>
       <a href="site/gymnastik.html"class="w3-button w3-bar-item">Gymnastik</a>
       <a href="site/segeln.html"class="w3-button w3-bar-item">Segeln</a>
       <a href="site/wandern.html"class="w3-button w3-bar-item">Wandern</a>
@@ -20,47 +23,42 @@
     </nav>
 
     <section>
-      <h1 class="w3-wide w3-center"> Aktuelles</h1>
+      <h1 class="w3-center">
+        Willkommen auf der Website des TuS Köln-Merkenich 2009 e.V.!
+      <h1>
       <p class="w3-opacity"> 
-        <h3> Lasst uns ins neue Jahr starten!,
-        8.1.2021</h3>
-        <h4>
-          Für den Sportbetrieb in der Halle mit den
-          Erwachsenen und den Kindern sind die
-          Einschränkungen zurzeit begrenzt bis zum
-          12.1.2022.
+        <h3>Corona SV in der geänderten Fassung, 13.1.2022 </h3>
 
-        </h4>
-          Die wichtigsten Punkte sind: Nur nach der
-          2G+-Regel dürfen Personen am Sport teilnehmen.
-          Das heißt nur geimpfte oder genesene Teilnehmer,
-          die zusätzlich einen max. 24 Stunden
-          zurückliegenden bescheinigten negativen
-          Antigentest vorweisen können oder über einen max.
-          48 Stunden zurückliegenden PCR-Test verfügen.
-          Schüler und Schülerrinnen bis 18 Jahre dürfen auch
-          weiterhin unter 3G Sport betreiben.  In der
-          Ferienzeit gilt der Schülerausweis nicht, es muss
-          ein negativer Antigentest einer zertifizierten
-          Stelle vorgelegt werden.  Kinder unter 15 Jahren
-          sind immunisierten Personen
-          gleichgestellt.<br>
-          <br>
-          Eltern/Kind Kurse Da bei diesen Kursen durch die
-          Coronaauflagen ein zusätzlicher Aufwand nötig ist,
-          hat der Vorstand für diese Kurse ab dem 01.01.2022
-          einen Aufnahmestopp beschlossen, die Probestunden
-          werden bis auf weiteres nicht mehr angeboten.  Die
-          Teilnahme an den Kursen wird auf 15 Kinder
-          begrenzt und auf eine Begleitperson pro Kind
-          beschränkt. Die Anmeldung für die Teilnahme
-          erfolgt über die Übungsleiterin.<br>
-          <br>
-          Wir informieren euch über neue
-          Entwicklungen, wenn sich etwas ändert.
-          Bis dahin, bleibt gesung. <br>
-          <br>
-          Der Vorstand <br>
+        Liebe Sportbegeisterte, <br>
+        <br>
+        es wird ein bisschen einfacher, in der Halle Sport zu machen. Hoffen wir, dass es so
+        bleibt. <br>
+        <br>
+        Für den Sportbetrieb in der Halle mit den Erwachsenen und den Kinder sind die
+        Einschränkungen geändert worden. Die wichtigsten Punkte sind: 
+        <ul>
+        <li>Nur nach der 2G+-Regel dürfen Personen am Sport- und Fitnessangebot teilnehmen
+        (das heißt, nur geimpfte oder genesene Teilnehmer, die zusätzlich einen max. 24 Stunden
+        zurückliegenden bescheinigten negativen Antigentest vorweisen können oder über einen max.
+        48 Stunden zurückliegenden PCR-Test verfügen). </li>
+        <li>Geboosterte Personen sind von der Testpflicht ausgenommen. </li>
+        <li>Schüler*innen bis 18 Jahre dürfen auch weiterhin nach der 3G-Regel
+        Sport betreiben. In der Ferienzeit gilt der Schülerausweis nicht, es muss auch ein
+        negativer Antigentest einer zertifizierten Stelle vorgelegt werden. Kinder unter 15 Jahren
+        sind immunisierten Personen gleichgestellt.  </li>
+        </ul>
+        An Orten, an denen ein Test für den Zutritt notwendig ist, berechtigt auch ein vom
+        Übungsleiter beaufsichtigter Selbsttest zu Zutritt.
+        <br>
+        Bei den Eltern-Kind-Kursen werden wir die Teilnahme an den Kursen weiter
+        beschränken. Den Aufnahmestopp und den Wegfall des Probetrainings werden wir verlängern.
+        Bei Anmeldungen werden wir eine Warteliste führen und die neuen Mitglieder informieren,
+        wenn eine Aufnahme möglich ist.
+        <br>
+        Bis dahin, viel Spaß und Vergnügen bei unserem Vereinssport. Bleibt alle gesund
+        und eurem Verein treu. <br>
+        <br>
+        Der Vorstand.<br>
 
         <h3>Endlich wieder Sport! Yoga-Kurs beim TuS, 17.08.2021</h3>
         Liebe Vereinsmitglieder,
@@ -105,24 +103,6 @@
         Wir freuen uns, wenn es nach den Ferien bei uns wieder richtig losgeht.
         <br>
         <br>
-        <h3>Wiederaufnahme Gymnastikkurse, 02.07.2021</h3>
-        Liebe Mitglieder der Gymnastik Sparte,<br>
-        seit 14 Tagen ist es uns nun wieder möglich den Sportbetrieb aufzunehmen. 
-        Wir freuen uns sehr darüber.
-        Der TuS Köln Merkenich bekommt für die Zeit der Sommerferien die Sporthalle der
-        Grundschule vom Sportamt zur Verfügung gestellt. Deshalb haben wir versucht unsere
-        Angebote in den Ferien zu ermöglichen. Leider war es so kurzfristig nicht für alle Kurse
-        möglich Übungsleiter zu finden,wir können anbieten: <br>
-        <br>
-        Dienstag :  16:15 bis 17:15      Eltern / Kind Turnen<br>
-        Dienstag :  17:15 bis 18:30      Eltern / Kind Turnen<br>
-        Mittwoch :  18:30 bis 19:30  Damengymnastik <br>
-        Mittwoch :  19:30 bis 20:30  Damengymnastik <br>
-        <br>
-        Die Gymnastikkurse können nur bei ausreichender Nachfrage über den gesamten Zeitraum
-        angeboten werden.
-        <br>
-        <br>
         <h3>SPORT@Home</h3>
         Für alle die auch in den aktuellen Zeiten aktiv mit anderen bleiben möchten,
 bietet die Initiative von fit.Koeln momentan ein tollen gratis Angebot für jederman. <br>
@@ -131,30 +111,8 @@ Informationen findet ihr unter <a href="https://www.fit-koeln.de">fit.koeln</a>.
         <a href="https://www.fit-koeln.de">
           <img src="img/fitkoeln.png" width="200">
         </a>
-        <h3>Arbeiten an der Delfin</h3>
-        Die Vereinsmitglieder der Delfin waren dieses Jahr schon aktiv und haben eine neue
-Holzleiste angebracht. Hier geht es weiter zur Bildergalerie <a
-href="site/delfin_album.html">Delfin Frühjahrsarbeiten</a>
       </p>
     </section>
-  
-    <section>
-      <h1 class="w3-wide w3-center"> Leitbild</h1>
-      <p class="w3-opacity">
-        Willkommen auf der Website des TuS Köln-Merkenich 2009 e.V.!</p>
-        <img src="img/home_flags.jpg" id="responsize-image">
-	    <p>
-	    Wir bieten Breitensport in familiärer Atmosphäre für
-      junge und jung gebliebene ältere Mitbürger.
-      Wir verbinden so unterschiedliche Sportarten wie Gymnastik, Wandern und Segeln 
-      und bringen so auch unsere Mitglieder zusammen.
-      Koorperationsverträge mit der Stadt Köln spiegeln die Verbundenheit mit unserem
-      Stadtteil wider. Unsere soziale Verantwortung beweisen wir mit niedrigen 
-      Beiträgen bei gleichzeitig gesunden Bilanzen.
-      </i>
-      </p>
-    </section>
-
    
 	<footer>&copy; 2019 TuS Merkenich 2009 e.V.</footer>
     <script src="app.js"></script>
