--- a/site/home.html
+++ b/site/home.html
@@ -7,18 +7,28 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <a href="../default.html">
-      <img src="../img/logo.png">
-    </a>
-    <nav class=navBar>
-      <a href="home.html"class="w3-button w3-bar-item">Home</a>
+    <figure> 
+      <a href="../default.html">
+        <img src="../img/home_top.png" class="center">
+      </a>
+    </figure>
+    <nav class="navBar">
+      <a href="../default.html"class="w3-button w3-bar-item">Aktuelles</a>
+      <a href="home.html"class="w3-button w3-bar-item">Über uns</a>
       <a href="gymnastik.html"class="w3-button w3-bar-item">Gymnastik</a>
       <a href="segeln.html"class="w3-button w3-bar-item">Segeln</a>
       <a href="wandern.html"class="w3-button w3-bar-item">Wandern</a>
       <a href="kontakt.html"class="w3-button w3-bar-item">Kontakt</a>
       <a href="impressum.html"class="w3-button w3-bar-item">Rechtliches</a>
     </nav>
-  <section>
+    <h1 class="w3-wide w3-center"> Leitbild</h1>
+    Wir bieten Breitensport in familiärer Atmosphäre für
+    junge und jung gebliebene ältere Mitbürger.
+    Wir verbinden so unterschiedliche Sportarten wie Gymnastik, Wandern und Segeln 
+    und bringen so auch unsere Mitglieder zusammen.
+    Koorperationsverträge mit der Stadt Köln spiegeln die Verbundenheit mit unserem
+    Stadtteil wider. Unsere soziale Verantwortung beweisen wir mit niedrigen 
+    Beiträgen bei gleichzeitig gesunden Bilanzen.
     <h1 class="w3-wide w3-center"> Vorstellung Verein</h1>
     <p>
       Unser Verein wurde im Jahr 2009 gegründet um den Sparten Gymnastik,
