--- a/site/wandern_termine.html
+++ b/site/wandern_termine.html
@@ -7,18 +7,20 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <a href="../default.html">
-      <img src="../img/logo.png">
-    </a>
-    <nav class=navBar>
-      <a href="home.html"class="w3-button w3-bar-item">Home</a>
+    <figure> 
+      <a href="../default.html">
+        <img src="../img/home_top.png" class="center">
+      </a>
+    </figure>
+    <nav class="navBar">
+      <a href="../default.html"class="w3-button w3-bar-item">Aktuelles</a>
+      <a href="home.html"class="w3-button w3-bar-item">Über uns</a>
       <a href="gymnastik.html"class="w3-button w3-bar-item">Gymnastik</a>
       <a href="segeln.html"class="w3-button w3-bar-item">Segeln</a>
       <a href="wandern.html"class="w3-button w3-bar-item">Wandern</a>
       <a href="kontakt.html"class="w3-button w3-bar-item">Kontakt</a>
       <a href="impressum.html"class="w3-button w3-bar-item">Rechtliches</a>
     </nav>
-    <p></p>
     <nav class=navBar2>
       <a href="wandern_album.html"class="w3-button w3-bar-item">Album</a>
       <a href="wandern_termine.html"class="w3-button w3-bar-item">Termine</a>
@@ -33,9 +35,10 @@
 	<tr>
 		<td height="31" align="right" sdnum="1033;0;@"><font face="AvantGarde Md BT" size=3><br></font></td>
 		<td align="left"><font face="AvantGarde Md BT" size=3><br></font></td>
-		<td align="left"><b><u><font face="AvantGarde Md BT" size=5>Terminliste  2020</font></u></b></td>
+		<td align="left"><b><u><font face="AvantGarde Md BT" size=5>Terminliste  2022</font></u></b></td>
 		<td align="center" sdnum="1033;0;DD/MM/YY;@"><br></td>
 	</tr>
+<!--
 	<tr>
 		<td height="20" align="right" sdnum="1033;0;@"><font face="AvantGarde Md BT" size=3><br></font></td>
 		<td align="left"><font face="AvantGarde Md BT" size=3><br></font></td>
@@ -419,7 +422,9 @@
 		<td align="right"><b><font face="AvantGarde Md BT" size=3>Bearbeitungsstand:</font></b></td>
 		<td align="center" sdval="43877" sdnum="1033;1033;M/D/YYYY"><font face="AvantGarde Md BT">2/16/2020</font></td>
 	</tr>
+-->
 </table>
+  Die Termine sind in Bearbeitung und werden hier erscheinen...
     </section>
   </body>
   <footer>&copy; 2019 TuS Merkenich 2009 e.V.</footer>
