--- a/site/kontakt.html
+++ b/site/kontakt.html
@@ -7,11 +7,14 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <a href="../default.html">
-      <img src="../img/logo.png">
-    </a>
-    <nav class=navBar>
-      <a href="home.html"class="w3-button w3-bar-item">Home</a>
+    <figure> 
+      <a href="../default.html">
+        <img src="../img/home_top.png" class="center">
+      </a>
+    </figure>
+    <nav class="navBar">
+      <a href="../default.html"class="w3-button w3-bar-item">Aktuelles</a>
+      <a href="home.html"class="w3-button w3-bar-item">Über uns</a>
       <a href="gymnastik.html"class="w3-button w3-bar-item">Gymnastik</a>
       <a href="segeln.html"class="w3-button w3-bar-item">Segeln</a>
       <a href="wandern.html"class="w3-button w3-bar-item">Wandern</a>
