--- a/site/wandern.html
+++ b/site/wandern.html
@@ -7,18 +7,20 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <a href="../default.html">
-      <img src="../img/logo.png">
-    </a>
-    <nav class=navBar>
-      <a href="home.html"class="w3-button w3-bar-item">Home</a>
+    <figure> 
+      <a href="../default.html">
+        <img src="../img/home_top.png" class="center">
+      </a>
+    </figure>
+    <nav class="navBar">
+      <a href="../default.html"class="w3-button w3-bar-item">Aktuelles</a>
+      <a href="home.html"class="w3-button w3-bar-item">Über uns</a>
       <a href="gymnastik.html"class="w3-button w3-bar-item">Gymnastik</a>
       <a href="segeln.html"class="w3-button w3-bar-item">Segeln</a>
       <a href="wandern.html"class="w3-button w3-bar-item">Wandern</a>
       <a href="kontakt.html"class="w3-button w3-bar-item">Kontakt</a>
       <a href="impressum.html"class="w3-button w3-bar-item">Rechtliches</a>
     </nav>
-    <p></p>
     <nav class=navBar2>
       <a href="wandern_album.html"class="w3-button w3-bar-item">Album</a>
       <a href="wandern_termine.html"class="w3-button w3-bar-item">Termine</a>
