Adds Anfänger-Angebot Yoga.

--- a/default.html
+++ b/default.html
@@ -27,60 +27,67 @@
         Willkommen auf der Website des TuS Köln-Merkenich 2009 e.V.!
       <h1>
       <p class="w3-opacity"> 
+        <h3>Yoga-Kurs für Anfänger, 23.01.2022</h3>
+          <h4>
+            Wir wollen wieder was Gutes für unsere Gesundheit tun, wir wollen wieder Yoga
+            machen
+          </h4>
+          Kurstart: 27.01.2022<br>
+          Termin: Donnerstags 18:30 bis 20:00 Uhr<br>
+          Ort: Turnhalle der Grundschule Merkenich<br>
+          Kursleiter: Dario Schepelmann<br>
+          Der Kurs findet bis zu den Sommerferien statt (inkl. 1. Probestunde)<br>
+          <br>
+          <table>
+            <tr> <th>Mitglieder des TuS </th> <th> kostenlos</th> </tr>
+            <tr> <th>Nicht-Mitglieder/Partner*innen von Mitegliedern </th> <th> 80 Euro</th> </tr>
+            <tr> <th>Ehepaare </th> <th> 100 Euro</th> </tr>
+            <tr> <th>Auszubildende/Studierende/Schüler*innen </th> <th> 60 Euro</th> </tr>
+            </tr>
+          </table>
+          Yoga unterstützt dich um mit den Anforderungen des Alltags gut umzugehen. Es
+          mobilisiert körpereigene Energien, mit denen du gelassen und selbstbewusst handeln kannst.
+          Eine zentrale Bedeutung spielt der Atem, welcher durch eine bewusste Ein- und Ausatmung,
+          die Bewegung und die Asanas führt.
+          Dein Körper wird durch die Übungen beweglicher, du kannst Stress besser loslassen und du
+          lernst dich tief zu entspannen.
+          Die Yogastunde beginnt mit einer Einstimmung und einer Aufwärmphase. Anschließend folgt
+          eine Übungsreihe und eine Tiefenentspannung. <br>
+          Meldet euch bei Interessen bei <b>Anita Lenarz</b>(0221-705774) oder <b>Andrea
+Spahn</b> (01792828278).<br>
+          Wir freuen uns auf euch! <br>
+          <br>
         <h3>Corona SV in der geänderten Fassung, 13.1.2022 </h3>
-
-        Liebe Sportbegeisterte, <br>
-        <br>
-        es wird ein bisschen einfacher, in der Halle Sport zu machen. Hoffen wir, dass es so
-        bleibt. <br>
-        <br>
-        Für den Sportbetrieb in der Halle mit den Erwachsenen und den Kinder sind die
-        Einschränkungen geändert worden. Die wichtigsten Punkte sind: 
-        <ul>
-        <li>Nur nach der 2G+-Regel dürfen Personen am Sport- und Fitnessangebot teilnehmen
-        (das heißt, nur geimpfte oder genesene Teilnehmer, die zusätzlich einen max. 24 Stunden
-        zurückliegenden bescheinigten negativen Antigentest vorweisen können oder über einen max.
-        48 Stunden zurückliegenden PCR-Test verfügen). </li>
-        <li>Geboosterte Personen sind von der Testpflicht ausgenommen. </li>
-        <li>Schüler*innen bis 18 Jahre dürfen auch weiterhin nach der 3G-Regel
-        Sport betreiben. In der Ferienzeit gilt der Schülerausweis nicht, es muss auch ein
-        negativer Antigentest einer zertifizierten Stelle vorgelegt werden. Kinder unter 15 Jahren
-        sind immunisierten Personen gleichgestellt.  </li>
-        </ul>
-        An Orten, an denen ein Test für den Zutritt notwendig ist, berechtigt auch ein vom
-        Übungsleiter beaufsichtigter Selbsttest zu Zutritt.
-        <br>
-        Bei den Eltern-Kind-Kursen werden wir die Teilnahme an den Kursen weiter
-        beschränken. Den Aufnahmestopp und den Wegfall des Probetrainings werden wir verlängern.
-        Bei Anmeldungen werden wir eine Warteliste führen und die neuen Mitglieder informieren,
-        wenn eine Aufnahme möglich ist.
-        <br>
-        Bis dahin, viel Spaß und Vergnügen bei unserem Vereinssport. Bleibt alle gesund
-        und eurem Verein treu. <br>
-        <br>
-        Der Vorstand.<br>
-
-        <h3>Endlich wieder Sport! Yoga-Kurs beim TuS, 17.08.2021</h3>
-        Liebe Vereinsmitglieder,
-        die aktuelle Lage zur Pandemie gibt uns Hoffnung das wir nach den Ferien unsern
-        Sportbetrieb wieder ohne große Einschränkungen aufnehmen können.  Daher möchten wir unsere
-        Ankündigung umsetzen und unseren Erwachsenen Mitglieder die im Jahr 2020 Ihren Beitrag
-        gezahlt haben einen <b>Yoga-Kurs</b> anbieten.  Der Kurs beginnt am Donnerstag den
-        <b>02.09.2021 von 18:30 bis 20:00 Uhr</b>
-        und findet in der Merkenicher Sporthalle statt. Er endet am
-        <b>16.12.2021</b> und findet in den Ferien nicht statt. Der Kurs ist für Anfänger und Teilnehmer
-        mit Grundkenntnissen geeignet. <br>
-        Um den Kurs planen zu können möchten wir euch bitten sich
-        bei unserer Spartenleiterin für Gymnastik Anita Lenarz zu melden. <b>Tel.
-        0221-705774 </b>.<br>
-        Der Kurs steht <b>auch Nichtmitgliedern</b> offen.
-        Die Anmeldegebühr beträgt <b>60,- Euro</b> für
-        Auszubildende, Studenten und Schüler mit einem Nachweis, 60,- Euro für
-        Lebenspartner von Mitgliedern und 100,- Euro für Nichtmitglieder. Der
-        <b>Anmeldeschluss ist der 26.08.2021</b>.<br><br>
-        Allen sportbegeisterten wünschen wir alles gute für
-        den Rest des Jahres. <br>
-        Ihr Vereinsvorstand
+          Liebe Sportbegeisterte, <br>
+          <br>
+          es wird ein bisschen einfacher, in der Halle Sport zu machen. Hoffen wir, dass es so
+          bleibt. <br>
+          <br>
+          Für den Sportbetrieb in der Halle mit den Erwachsenen und den Kinder sind die
+          Einschränkungen geändert worden. Die wichtigsten Punkte sind: 
+          <ul>
+          <li>Nur nach der 2G+-Regel dürfen Personen am Sport- und Fitnessangebot teilnehmen
+          (das heißt, nur geimpfte oder genesene Teilnehmer, die zusätzlich einen max. 24 Stunden
+          zurückliegenden bescheinigten negativen Antigentest vorweisen können oder über einen max.
+          48 Stunden zurückliegenden PCR-Test verfügen). </li>
+          <li>Geboosterte Personen sind von der Testpflicht ausgenommen. </li>
+          <li>Schüler*innen bis 18 Jahre dürfen auch weiterhin nach der 3G-Regel
+          Sport betreiben. In der Ferienzeit gilt der Schülerausweis nicht, es muss auch ein
+          negativer Antigentest einer zertifizierten Stelle vorgelegt werden. Kinder unter 15 Jahren
+          sind immunisierten Personen gleichgestellt.  </li>
+          </ul>
+          An Orten, an denen ein Test für den Zutritt notwendig ist, berechtigt auch ein vom
+          Übungsleiter beaufsichtigter Selbsttest zu Zutritt.
+          <br>
+          Bei den Eltern-Kind-Kursen werden wir die Teilnahme an den Kursen weiter
+          beschränken. Den Aufnahmestopp und den Wegfall des Probetrainings werden wir verlängern.
+          Bei Anmeldungen werden wir eine Warteliste führen und die neuen Mitglieder informieren,
+          wenn eine Aufnahme möglich ist.
+          <br>
+          Bis dahin, viel Spaß und Vergnügen bei unserem Vereinssport. Bleibt alle gesund
+          und eurem Verein treu. <br>
+          <br>
+          Der Vorstand.<br>
         <h3>Kölle aktiv, 02.07.2021</h3>
         Der Stadtsportbund Köln bietet in diesem Jahr vom 01.07. bis zum 31.09.2021 wieder
         ein für alle Kölner kostenloses Programm an. <br>
