Adds Merkenich menu point and information on internet building in Merkenich.

--- a/default.html
+++ b/default.html
@@ -14,6 +14,7 @@
     </figure>
     <nav class="navBar">
       <a href="default.html"class="w3-button w3-bar-item">Aktuelles</a>
+      <a href="site/merkenich.html"class="w3-button w3-bar-item">Merkenich</a>
       <a href="site/home.html"class="w3-button w3-bar-item">Über uns</a>
       <a href="site/gymnastik.html"class="w3-button w3-bar-item">Gymnastik</a>
       <a href="site/segeln.html"class="w3-button w3-bar-item">Segeln</a>
