--- a/site/home.html
+++ b/site/home.html
@@ -14,6 +14,7 @@
     </figure>
     <nav class="navBar">
       <a href="../default.html"class="w3-button w3-bar-item">Aktuelles</a>
+			<a href="merkenich.html" class="w3-button w3-bar-item">Merkenich</a>
       <a href="home.html"class="w3-button w3-bar-item">Über uns</a>
       <a href="gymnastik.html"class="w3-button w3-bar-item">Gymnastik</a>
       <a href="segeln.html"class="w3-button w3-bar-item">Segeln</a>
