Adds information about klaerschlammverbrennung.

--- a/site/merkenich.html
+++ b/site/merkenich.html
@@ -54,6 +54,15 @@
       Aktuelle Infos über: 
       <a href "http://www.buergerverein-merkenich.de">http://www.buergerverein-merkenich.de</a> <br>
       Der Vorstand des TuS blickt gespannt auf die Entwicklung in diesem Thema. <br>
+    <h2 class="w3-wide w3-center"> Klärschlammverbrennung in Merkenich, 23.01.2022</h2>
+      Der Kölner Stadtrat und die Stadtentwässerungsbetriebe haben den Bau einer
+      Klärschlammverbrennungsanlage in Köln-Merkenich beschlossen. Der Standort der
+      geplanten Anlage ist unweit vom Gelände des Fußballplatzes und nahe einiger
+      Mehrfamilienhäuser und des Naturschutzgebietes Rheinaue Merkenich-Langel.<br>
+      <br>
+      Für mehr Informationen verweisen wir auch auf den 
+      <a href="https://buergerverein-merkenich.de">Bürgerverein Merkenich</a>.<br>
+      <br>
   </body>
   <footer>&copy; 2019 TuS Merkenich 2009 e.V.</footer>
 </html>
