Adds link to Merkenich in default.html.

--- a/default.html
+++ b/default.html
@@ -28,6 +28,11 @@
         Willkommen auf der Website des TuS Köln-Merkenich 2009 e.V.!
       <h1>
       <p class="w3-opacity"> 
+        <h3> Informationen für Merkenicher, 23.01.2022</h3>
+          Als Verein in Merkenich wollen wir zukünftig auch einige Informationen und Links
+zu lokal-politischen Themen bieten. Mehr Informationen findet Ihr unter dem Reiter
+<a href="site/merkenich.html"class="w3-button
+w3-bar-item">Merkenich</a>.<br>
         <h3>Yoga-Kurs für Anfänger, 23.01.2022</h3>
           <h4>
             Wir wollen wieder was Gutes für unsere Gesundheit tun, wir wollen wieder Yoga
@@ -58,7 +63,7 @@
 Spahn</b> (01792828278).<br>
           Wir freuen uns auf euch! <br>
           <br>
-        <h3>Corona SV in der geänderten Fassung, 13.1.2022 </h3>
+        <h3>Corona SV in der geänderten Fassung, 13.01.2022 </h3>
           Liebe Sportbegeisterte, <br>
           <br>
           es wird ein bisschen einfacher, in der Halle Sport zu machen. Hoffen wir, dass es so
