Kleine Änderungen in bezug auf politisches.

--- a/default.html
+++ b/default.html
@@ -30,7 +30,7 @@
       <p class="w3-opacity"> 
         <h3> Informationen für Merkenicher, 23.01.2022</h3>
           Als Verein in Merkenich wollen wir zukünftig auch einige Informationen und Links
-zu lokal-politischen Themen bieten. Mehr Informationen findet Ihr unter dem Reiter
+zu lokaln Themen bieten. Mehr Informationen findet Ihr unter dem Reiter
 <a href="site/merkenich.html"class="w3-button
 w3-bar-item">Merkenich</a>.<br>
         <h3>Yoga-Kurs für Anfänger, 23.01.2022</h3>
@@ -38,7 +38,7 @@ w3-bar-item">Merkenich</a>.<br>
             Wir wollen wieder was Gutes für unsere Gesundheit tun, wir wollen wieder Yoga
             machen
           </h4>
-          Kurstart: 27.01.2022<br>
+          Kurstart: 03.02.2022<br>
           Termin: Donnerstags 18:30 bis 20:00 Uhr<br>
           Ort: Turnhalle der Grundschule Merkenich<br>
           Kursleiter: Dario Schepelmann<br>
