--- a/site/merkenich.html
+++ b/site/merkenich.html
@@ -23,7 +23,7 @@
       <a href="impressum.html"class="w3-button w3-bar-item">Rechtliches</a>
     </nav>
     <h1 class="w3-wide w3-center"> Informationen für Merkenich</h1>
-      Als Verein in Merkenich wollen wir unsere Mitglieder auch über aktuelle politische
+      Als Verein in Merkenich wollen wir unsere Mitglieder auch über aktuelle 
       Themen im Ort informieren. Links zu weiterführenden Informationen werden hier gesammelt.
     <h2 class="w3-wide w3-center"> Schnelles Internet für Merkenich, 23.01.2022</h2>
       Auch zum Thema Netzausbau in Merkenich möchte unser Verein den Bürgerverein
@@ -61,7 +61,8 @@
       Mehrfamilienhäuser und des Naturschutzgebietes Rheinaue Merkenich-Langel.<br>
       <br>
       Für mehr Informationen verweisen wir auch auf den 
-      <a href="https://buergerverein-merkenich.de">Bürgerverein Merkenich</a>.<br>
+      <a href="https://buergerverein-merkenich.de">Bürgerverein Merkenich</a>
+      oder auf <a href="https://www.koelnnord.de">www.koelnnord.de</a>.<br>
       <br>
   </body>
   <footer>&copy; 2019 TuS Merkenich 2009 e.V.</footer>
