--- a/default.html
+++ b/default.html
@@ -28,12 +28,29 @@
         Willkommen auf der Website des TuS Köln-Merkenich 2009 e.V.!
       <h1>
       <p class="w3-opacity"> 
-        <h3> Informationen für Merkenicher, 23.01.2022</h3>
+      <h3> Einladung zu unserem <b>Vereinsfest am 13.8.2022</b><br><small>11.07.2022</small></h3>
+          Zum 10-jährigen Bestehen unseres Vereins hat uns die Corona-Pandemie einen Strich
+          durch die Rechnung gemacht. Nun möchten wir die versprochene Feier zum 12-jährigen
+          Bestehen nachholen.  <br>
+          Wir laden am Samstag, den 13.8.2022, <b>von 13 Uhr bis 18 Uhr ins Schützenheim 
+          Daverkusenstraße in Köln-Merkenich </b>ein. <br>
+          Für unseren Kleinen bieten wir Spaß und Unterhaltung in Form von kleinen Spielen
+          an. Es ist auch geplant eine Hüpfburg aufzustellen, damit die Kleinen sich ganz
+          ohne Eltern vergnügen können. <br>
+          Unseren Mitgliedern und Übungsleitern sowie deren Familien bieten wir die
+          Möglichkeit, unseren Verein besser kennenzulernen. Für Getränke und Imbiss ist 
+          gesorgt.  <br>
+          Dieses Fest is auch als Dankeschön an die Vereinsmitglieder zu verstehen, die uns
+          in der schwierigen Zeit der Pandemie die Treue gehalten haben. <br>
+          <br>
+          Wir freuen uns auf euch, <br>
+          Der Vorstand.
+        <h3> Informationen für Merkenicher<br><small>23.01.2022</small></h3>
           Als Verein in Merkenich wollen wir zukünftig auch einige Informationen und Links
-zu lokaln Themen bieten. Mehr Informationen findet Ihr unter dem Reiter
-<a href="site/merkenich.html"class="w3-button
-w3-bar-item">Merkenich</a>.<br>
-        <h3>Yoga-Kurs für Anfänger, 23.01.2022</h3>
+          zu lokalen Themen bieten. Mehr Informationen findet Ihr unter dem Reiter
+          <a href="site/merkenich.html"class="w3-button
+          w3-bar-item">Merkenich</a>.<br>
+        <h3>Yoga-Kurs für Anfänger<br><small>23.01.2022</small></h3>
           <h4>
             Wir wollen wieder was Gutes für unsere Gesundheit tun, wir wollen wieder Yoga
             machen
@@ -59,11 +76,11 @@ w3-bar-item">Merkenich</a>.<br>
           lernst dich tief zu entspannen.
           Die Yogastunde beginnt mit einer Einstimmung und einer Aufwärmphase. Anschließend folgt
           eine Übungsreihe und eine Tiefenentspannung. <br>
-          Meldet euch bei Interessen bei <b>Anita Lenarz</b>(0221-705774) oder <b>Andrea
+          Meldet euch bei Interessen bei <b>Anita Lenarz</b> (0221-705774) oder <b>Andrea
 Spahn</b> (01792828278).<br>
           Wir freuen uns auf euch! <br>
           <br>
-        <h3>Corona SV in der geänderten Fassung, 13.01.2022 </h3>
+          <h3>Corona SV in der geänderten Fassung<br><small>13.01.2022</small></h3>
           Liebe Sportbegeisterte, <br>
           <br>
           es wird ein bisschen einfacher, in der Halle Sport zu machen. Hoffen wir, dass es so
@@ -94,7 +111,7 @@ Spahn</b> (01792828278).<br>
           und eurem Verein treu. <br>
           <br>
           Der Vorstand.<br>
-        <h3>Kölle aktiv, 02.07.2021</h3>
+        <h3>Kölle aktiv<br><small>02.07.2021</small></h3>
         Der Stadtsportbund Köln bietet in diesem Jahr vom 01.07. bis zum 31.09.2021 wieder
         ein für alle Kölner kostenloses Programm an. <br>
         <br>
