Adds wandern termine. Updates Neuigkeiten. Stand 2. August 2022.

--- a/default.html
+++ b/default.html
@@ -40,11 +40,33 @@
           Unseren Mitgliedern und Übungsleitern sowie deren Familien bieten wir die
           Möglichkeit, unseren Verein besser kennenzulernen. Für Getränke und Imbiss ist 
           gesorgt.  <br>
-          Dieses Fest is auch als Dankeschön an die Vereinsmitglieder zu verstehen, die uns
+          Dieses Fest ist auch als Dankeschön an die Vereinsmitglieder zu verstehen, die uns
           in der schwierigen Zeit der Pandemie die Treue gehalten haben. <br>
           <br>
           Wir freuen uns auf euch, <br>
           Der Vorstand.
+        <h3>Kölle aktiv<br><small>02.07.2022</small></h3>
+        Der Stadtsportbund Köln bietet auch in diesem Jahr vom 01.06. bis zum 31.08.2022 wieder
+        ein für alle Kölner kostenloses Programm an. <br>
+        <br>
+        <a href="https://www.koelle-aktiv.de">
+          <img src="img/koelle_aktiv.jpg" width="100" height="100">
+        </a>
+        <br>
+        <br>
+        Die Internetseite ist sehr übersichtlich aufgebaut und bietet viele tolle Angebote.
+        <ul>
+        <li>Sortiert nach Bezirken (Chorweiler,Ehrenfeld,Nippes,Lindenthal usw)</li>
+        <li>Kursheft nach Wochentagen</li>
+        <li>alle Aktivitäten im Freien</li>
+        <li>keine Vereinszugehöhrigkeit nötig</li>
+        <li>keine Anmeldung nötig</li>
+        <li>Standortbeschreibung mit Google Maps hinterlegt.</li>
+        </ul>
+        Also Angebot aussuchen, hingehen, mitmachen und Spass haben.
+        Wir freuen uns, wenn es nach den Ferien bei uns wieder richtig losgeht.
+        <br>
+        <br>
         <h3> Informationen für Merkenicher<br><small>23.01.2022</small></h3>
           Als Verein in Merkenich wollen wir zukünftig auch einige Informationen und Links
           zu lokalen Themen bieten. Mehr Informationen findet Ihr unter dem Reiter
@@ -111,28 +133,6 @@ Spahn</b> (01792828278).<br>
           und eurem Verein treu. <br>
           <br>
           Der Vorstand.<br>
-        <h3>Kölle aktiv<br><small>02.07.2021</small></h3>
-        Der Stadtsportbund Köln bietet in diesem Jahr vom 01.07. bis zum 31.09.2021 wieder
-        ein für alle Kölner kostenloses Programm an. <br>
-        <br>
-        <a href="https://www.koelle-aktiv.de">
-          <img src="img/koelle_aktiv.jpg" width="100" height="100">
-        </a>
-        <br>
-        <br>
-        Die Internetseite ist sehr übersichtlich aufgebaut und bietet viele tolle Angebote.
-        <ul>
-        <li>Sortiert nach Bezirken (Chorweiler,Ehrenfeld,Nippes,Lindenthal usw)</li>
-        <li>Kursheft nach Wochentagen</li>
-        <li>alle Aktivitäten im Freien</li>
-        <li>keine Vereinszugehöhrigkeit nötig</li>
-        <li>keine Anmeldung nötig</li>
-        <li>Standortbeschreibung mit Google Maps hinterlegt.</li>
-        </ul>
-        Also Angebot aussuchen, hingehen, mitmachen und Spass haben.
-        Wir freuen uns, wenn es nach den Ferien bei uns wieder richtig losgeht.
-        <br>
-        <br>
         <h3>SPORT@Home</h3>
         Für alle die auch in den aktuellen Zeiten aktiv mit anderen bleiben möchten,
 bietet die Initiative von fit.Koeln momentan ein tollen gratis Angebot für jederman. <br>
