--- a/default.html
+++ b/default.html
@@ -28,6 +28,81 @@
         Willkommen auf der Website des TuS Köln-Merkenich 2009 e.V.!
       <h1>
       <p class="w3-opacity"> 
+      <h3> Der TuS feiert <b>Sommerferst</b><br><small>20.08.2022</small></h3>
+          Am 13.8. haben wir mit euch unser erstes Sommerferst gefeiert. Wir möchten
+          uns nochmal ganz herzlich über eure Treue während der, für uns alle, schwierigen
+          Corona-Zeit bedanken. Ohne euch wären wir nicht! Im Namen des Vorstands 
+          möchten wir uns für diesen schönen (wenn auch heißen) Tag bedanken und 
+          hoffen es hat euch auch gefallen. Hier findet ihr noch ein paar schöne Bilder
+          vom Tag.<br>
+          <br>
+          Genießt weiterhin den Sommer,<br>
+          der Vorstand.<b>
+      <div class="slideshow-container">
+        <div name="supSlide" class="mySlides fade">
+          <div class="numbertext">1 / 11</div>
+          <img src="img/sommerfest_2022/IMG_6223.JPG" style="width:100%">
+        </div>
+        <div name="supSlide" class="mySlides fade">
+          <div class="numbertext">2 / 11</div>
+          <img src="img/sommerfest_2022/IMG_6225.JPG" style="width:100%">
+        </div>
+        <div name="supSlide" class="mySlides fade">
+          <div class="numbertext">3 / 11</div>
+          <img src="img/sommerfest_2022/IMG_6227.JPG" style="width:100%">
+        </div>
+        <div name="supSlide" class="mySlides fade">
+          <div class="numbertext">4 / 11</div>
+          <img src="img/sommerfest_2022/IMG_6228.JPG" style="width:100%">
+        </div>
+        <div name="supSlide" class="mySlides fade">
+          <div class="numbertext">5 / 11</div>
+          <img src="img/sommerfest_2022/IMG_6229.JPG" style="width:100%">
+        </div>
+        <div name="supSlide" class="mySlides fade">
+          <div class="numbertext">6 / 11</div>
+          <img src="img/sommerfest_2022/IMG_6230.JPG" style="width:100%">
+        </div>
+        <div name="supSlide" class="mySlides fade">
+          <div class="numbertext">7 / 11</div>
+          <img src="img/sommerfest_2022/IMG_6231.JPG" style="width:100%">
+        </div>
+        <div name="supSlide" class="mySlides fade">
+          <div class="numbertext">8 / 11</div>
+          <img src="img/sommerfest_2022/IMG_6232.JPG" style="width:100%">
+        </div>
+        <div name="supSlide" class="mySlides fade">
+          <div class="numbertext">9 / 11</div>
+          <img src="img/sommerfest_2022/IMG_6235.JPG" style="width:100%">
+        </div>
+        <div name="supSlide" class="mySlides fade">
+          <div class="numbertext">10 / 11</div>
+          <img src="img/sommerfest_2022/IMG_6237.JPG" style="width:100%">
+        </div>
+        <div name="supSlide" class="mySlides fade">
+          <div class="numbertext">11 / 11</div>
+          <img src="img/sommerfest_2022/IMG_6238.JPG" style="width:100%">
+        </div>
+        <a class="prev" onclick="plusSlides(-1, 'supSlide', 'supDot')">&#10094;</a>
+        <a class="next" onclick="plusSlides(1, 'supSlide', 'supDot')">&#10095;</a>
+      </div>
+      <br>
+
+      <div style="text-align:center">
+        <span name="supDot" class="dot" onclick="currentSlide(1, 'supSlide', 'supDot')"></span>
+        <span name="supDot" class="dot" onclick="currentSlide(2, 'supSlide', 'supDot')"></span>
+        <span name="supDot" class="dot" onclick="currentSlide(3, 'supSlide', 'supDot')"></span>
+        <span name="supDot" class="dot" onclick="currentSlide(4, 'supSlide', 'supDot')"></span>
+        <span name="supDot" class="dot" onclick="currentSlide(5, 'supSlide', 'supDot')"></span>
+        <span name="supDot" class="dot" onclick="currentSlide(6, 'supSlide', 'supDot')"></span>
+        <span name="supDot" class="dot" onclick="currentSlide(7, 'supSlide', 'supDot')"></span>
+        <span name="supDot" class="dot" onclick="currentSlide(8, 'supSlide', 'supDot')"></span>
+        <span name="supDot" class="dot" onclick="currentSlide(9, 'supSlide', 'supDot')"></span>
+        <span name="supDot" class="dot" onclick="currentSlide(10, 'supSlide', 'supDot')"></span>
+        <span name="supDot" class="dot" onclick="currentSlide(11, 'supSlide', 'supDot')"></span>
+      </div>
+
+
       <h3> Einladung zu unserem <b>Vereinsfest am 13.8.2022</b><br><small>11.07.2022</small></h3>
           Zum 10-jährigen Bestehen unseres Vereins hat uns die Corona-Pandemie einen Strich
           durch die Rechnung gemacht. Nun möchten wir die versprochene Feier zum 12-jährigen
@@ -148,4 +223,5 @@ Informationen findet ihr unter <a href="https://www.fit-koeln.de">fit.koeln</a>.
     <script src="app.js"></script>
     <noscript>You need to enable JavaScript to view the full site.</noscript>
   </body>
+  <script src="slides.js"></script>
 </html>
