Adds captions to Sommerfest images.

--- a/default.html
+++ b/default.html
@@ -37,51 +37,69 @@
           vom Tag.<br>
           <br>
           Genießt weiterhin den Sommer,<br>
-          der Vorstand.<b>
+          der Vorstand.<br>
       <div class="slideshow-container">
         <div name="supSlide" class="mySlides fade">
           <div class="numbertext">1 / 11</div>
           <img src="img/sommerfest_2022/IMG_6223.JPG" style="width:100%">
+          <div class="text">Unser erster Vorsitzender, Hansjörg Schneider, eröffnet das Vereinsfest 2022.</div>
         </div>
         <div name="supSlide" class="mySlides fade">
           <div class="numbertext">2 / 11</div>
           <img src="img/sommerfest_2022/IMG_6225.JPG" style="width:100%">
+          <div class="text">Unsere Hüpfburg wurde durch die hohen Temperaturen leider 
+            wenig genutzt.</div>
         </div>
         <div name="supSlide" class="mySlides fade">
           <div class="numbertext">3 / 11</div>
           <img src="img/sommerfest_2022/IMG_6227.JPG" style="width:100%">
+          <div class="text">Die große Hitze hat auch dazu geführt, dass Familien mit Kindern
+          am Anfang nicht stark vertreten waren.</div>
         </div>
         <div name="supSlide" class="mySlides fade">
           <div class="numbertext">4 / 11</div>
           <img src="img/sommerfest_2022/IMG_6228.JPG" style="width:100%">
+          <div class="text">Herr Bruno Klais vom Bürgerverein Merkenich folgte unserer 
+          Einladung, bedankte sich für die gemeinsame gute Arbeit und stand den Besuchern
+          für Fragen zur Verfügung.</div>
         </div>
         <div name="supSlide" class="mySlides fade">
           <div class="numbertext">5 / 11</div>
           <img src="img/sommerfest_2022/IMG_6229.JPG" style="width:100%">
+          <div class="text">Die Mitglieder der Damengymnastik und der Wandersparte waren
+          reichlich vertreten und genossen das Beisammensein.</div>
         </div>
         <div name="supSlide" class="mySlides fade">
           <div class="numbertext">6 / 11</div>
           <img src="img/sommerfest_2022/IMG_6230.JPG" style="width:100%">
+          <div class="text">Die angebotenen Speisen und Getränke kamen gut an.</div>
         </div>
         <div name="supSlide" class="mySlides fade">
           <div class="numbertext">7 / 11</div>
           <img src="img/sommerfest_2022/IMG_6231.JPG" style="width:100%">
+          <div class="text">Die Merkenicher freiwillige Feuerweher kam mit einem großen  Fahrzeug vorbei und gab Interessierten ausführliche Erklärungen.</div>
         </div>
         <div name="supSlide" class="mySlides fade">
           <div class="numbertext">8 / 11</div>
           <img src="img/sommerfest_2022/IMG_6232.JPG" style="width:100%">
+          <div class="text">Der TuS Merkenich bedankt sich herzlichst.</div>
         </div>
         <div name="supSlide" class="mySlides fade">
           <div class="numbertext">9 / 11</div>
           <img src="img/sommerfest_2022/IMG_6235.JPG" style="width:100%">
+          <div class="text">Unsere besonderer Dank gilt Herrn Günther Paffenholz, der
+          mit seinen stolzen 93 Jahren mit uns gefeiert hat.</div>
         </div>
         <div name="supSlide" class="mySlides fade">
           <div class="numbertext">10 / 11</div>
           <img src="img/sommerfest_2022/IMG_6237.JPG" style="width:100%">
+          <div class="text">Für unsere Kleinsten wurden Spiele angeboten, die trotz
+          der Hitze gut angenommen wurden.</div>
         </div>
         <div name="supSlide" class="mySlides fade">
           <div class="numbertext">11 / 11</div>
           <img src="img/sommerfest_2022/IMG_6238.JPG" style="width:100%">
+          <div class="text">Bis zum späten Nachmittag wurde auch bei Kaffee und Kuchen fröhlich diskutiert.</div>
         </div>
         <a class="prev" onclick="plusSlides(-1, 'supSlide', 'supDot')">&#10094;</a>
         <a class="next" onclick="plusSlides(1, 'supSlide', 'supDot')">&#10095;</a>
